--- a/index.html
+++ b/index.html
@@ -2,75 +2,76 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta charset="UTF-8">
-    <title>CATADVICE</title>
+    <title>CatAdvice</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="img-movendo ">
+        <div class="img-movendo">
             <img class="imgAnimation"
-                src="C:\Users\emill\OneDrive\Documentos\code\HTML\assets\img\d285ba2cc51a540ad5d5e06c489ce121.gif">
+                src="assets/img/gifgatinho.gif"
+                alt="Animação de Gato">
         </div>
-        <h1>A HISTORIA DOS GATOS </h1>
+        <h1>A HISTÓRIA DOS GATOS</h1>
 
         <nav>
             <div class="container">
                 <div class="divfilho">
-                    <a href="../index.html"> Início </a>
+                    <a href="../index.html">Início</a>
                 </div>
                 <div class="divfilho">
-                    <a href="pages/generos.html"> Dicas </a>
+                    <a href="pages/generos.html">Dicas</a>
                 </div>
                 <div class="divfilho">
-                    <a href="/pages/plataformas.html"> Inscreva-se </a>
-
+                    <a href="../HTML/pages/plataformas.html">Inscreva-se</a>
                 </div>
             </div>
         </nav>
     </header>
-    <section>
-        <div>
-            <h2>História dos gatos</h2>
-            <img src="assets/img/Primeirafoto.jfif" alt="Gato" title="Gato">
-            <p>Os gatos são animais fascinantes que têm uma longa história de convivência com os seres humanos. Eles
-                foram
-                domesticados há cerca de 9.000 anos no Oriente Médio, onde eram valorizados por sua habilidade em caçar
-                roedores e proteger os estoques de grãos.<br>Desde então, os gatos se tornaram companheiros populares em
-                todo o mundo, com uma variedade de raças e
-                personalidades. Eles são conhecidos por sua independência, curiosidade e comportamento brincalhão.</p>
-        </div>
-        <div>
-            <h2>MITOLOGIA</h2>
-            <h3>EGÍPSIA</h3>
-            <p>Na mitologia egípcia, os gatos eram considerados animais sagrados e eram associados à deusa Bastet, que
-                era a deusa da fertilidade, do lar e da proteção. Os egípcios acreditavam que os gatos traziam boa sorte
-                e protegiam as casas contra maus espíritos.</p>
-            <img src="assets/img/bastetdeusa.jpg" alt="Deusa Bastet" title="Deusa Bastet">
-        </div>
-        <div>
-            <img src="assets/img/registro1.jpg" alt="Registro em pedra" title="Registro em pedra">
 
-            <img src="assets/img/registro2.jpg" alt="Escultuta" title="Escultura">
+   <main>
 
-            <img src="assets/img/registro3.jpg" alt="Estatua" title="Estatua">
-        </div>
-
-        <footer>
-            <div>
-                <img src="assets/img/CATADVICELOGOSEMFUNDO.png">
-                <p>CATADVICE é um site sobre curiosidades, dicas e entreterimento sobre o mundo felino</p>
-                <p>Facebook</p>
-                <p>Instagram</p>
-                <p>E-mail</p>
+    <section >
+        <h2>Como Iniciou</h2>
+        <div class="secao-flex">
+            <img src="assets/img/gatoCacando.png" alt="Gato no ninho">
+            <div class="texto">
+                <p>Uns 10 mil anos atrás, os gatos começaram a viver com os humanos, ajudando a acabar com os ratos que invadiam os grãos. Nessa época, surgiram lendas dizendo que eles nasceram do espírito de um leão, provavelmente porque os dois são bem parecidos, já que vêm da mesma família.</p>
             </div>
-            Copyright &copy; ADS2025
-            <p>CatAdvice</p>
-            <a href="index.html">Início</a>
-            <a href="pages/generos.html">Dicas</a>
-            <a href="pages/plataformas.html">Inscreva-se</a>
-        </footer>
-</body>
+        </div>
 
-</html>
+        <div>
+        <h2 class="texto">Mitologia</h2>
+        <div class="secao-flex">
+            <div class="texto">
+                <div class="subtitulo">Egípcia</div>
+                <p>Os egípcios ficaram ainda mais próximos dos gatos, já que várias de suas divindades tinham partes de gato. A deusa Bastet, por exemplo, era uma mulher com cabeça de gata. Dá pra ver pelos registros que os gatos andavam livremente na corte e se aproximavam de todo mundo sem medo.</p>
+            </div>
+            <figure>
+                <img src="assets/img/bastetdeusa.jpg" alt="Deusa Bastet">
+                <figcaption>BASTET DEUSA</figcaption>
+            </figure>
+        </div>
+
+        <h2>Registros</h2>
+        <div class="galeria">
+            <img src="assets/img/registro1.jpg" alt="Registro em pedra">
+            <img src="assets/img/registro2.jpg" alt="Escultura de gato">
+            <img src="assets/img/registro3.jpg" alt="Estátua de gato">
+        </div>
+    </section>
+
+</main>
+
+<footer>
+    <img src="assets/img/CATADVICELOGOSEMFUNDO.png" alt="Logo CatAdvice">
+    <p>CATADVICE é um site sobre curiosidades, dicas e entretenimento sobre o mundo felino.</p>
+    <nav>
+        <a href="index.html">Início</a> |
+        <a href="pages/generos.html">Dicas</a> |
+        <a href="pages/plataformas.html">Inscreva-se</a>
+    </nav>
+    <p>&copy; 2025 CatAdvice</p>
+</footer>
