--- a/pages/generos.html
+++ b/pages/generos.html
@@ -3,8 +3,9 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/dicas.css">
     <meta charset="UTF-8">
-    <title>Sitezin de games</title>
+    <title>CatAdvice</title>
 </head>
 
 <body>
@@ -69,39 +70,35 @@
         </table>
 
 
-        <div>
-
-            <h3>Algumas raças:</h3>
-
-            <div>
-                <img src="../assets/img/sphynx.jfif" alt="Sphynx" title="Sphynx">
-                <p>Sphynx</p>
-            </div>
-            <div>
-                <img src="../assets/img/siames.jfif" alt="Siames" title="Siames">
-                <p>Siamês</p>
-            </div>
-            <div>
-                <img src="../assets/img/persa.jfif" alt="Persa" title="Persa">
-                <p>Persa</p>
+        <div class="breeds-container">
+            <h3 class="breeds-title">Algumas raças</h3>
+            <div class="breeds-gallery">
+                <div class="breed-card">
+                    <img class="breed-image" src="../assets/img/sphynx.jfif" alt="Sphynx">
+                    <p class="breed-name">Sphynx</p>
+                </div>
+                <div class="breed-card">
+                    <img class="breed-image" src="../assets/img/siames.jfif" alt="Siamês">
+                    <p class="breed-name">Siamês</p>
+                </div>
+                <div class="breed-card">
+                    <img class="breed-image" src="../assets/img/persa.jfif" alt="Persa">
+                    <p class="breed-name">Persa</p>
+                </div>
             </div>
         </div>
     </section>
-
     <footer>
-        <div>
-            <img src="../assets/img/CATADVICELOGOSEMFUNDO.png">
-            <p>CATADVICE é um site sobre curiosidades, dicas e entreterimento sobre o mundo felino</p>
-            <p>Facebook</p>
-            <p>Instagram</p>
-            <p>E-mail</p>
-        </div>
-        Copyright &copy; ADS2025
-        <p>CatAdvice</p>
-        <a href="index.html">Início</a>
-        <a href="pages/generos.html">Dicas</a>
-        <a href="pages/plataformas.html">Inscreva-se</a>
+        <img src="../assets/img/CATADVICELOGOSEMFUNDO.png" alt="Logo CatAdvice">
+        <p>CATADVICE é um site sobre curiosidades, dicas e entretenimento sobre o mundo felino.</p>
+        <nav>
+            <a href="index.html">Início</a> |
+            <a href="pages/generos.html">Dicas</a> |
+            <a href="pages/plataformas.html">Inscreva-se</a>
+        </nav>
+        <p>&copy; 2025 CatAdvice</p>
     </footer>
+
 </body>
 
 </html>
