--- a/index.html
+++ b/index.html
@@ -10,68 +10,71 @@
 <body>
     <header>
         <div class="img-movendo">
-            <img class="imgAnimation"
-                src="assets/img/gifgatinho.gif"
-                alt="Animação de Gato">
+            <img class="imgAnimation" src="assets/img/gifgatinho.gif" alt="Animação de Gato">
         </div>
         <h1>A HISTÓRIA DOS GATOS</h1>
 
         <nav>
             <div class="container">
-                <div class="divfilho">
-                    <a href="../index.html">Início</a>
+                <div>
+                    <a href="index.html">Início</a>
                 </div>
-                <div class="divfilho">
-                    <a href="pages/generos.html">Dicas</a>
+                <div>
+                    <a href="pages/dicas.html">Dicas</a>
                 </div>
-                <div class="divfilho">
-                    <a href="../HTML/pages/plataformas.html">Inscreva-se</a>
-                </div>
+                <div>
+                    <a href="pages/inscrevase.html">Inscreva-se </a>
+                </div>  
             </div>
         </nav>
     </header>
 
-   <main>
+    <main>
 
-    <section >
-        <h2>Como Iniciou</h2>
-        <div class="secao-flex">
-            <img src="assets/img/gatoCacando.png" alt="Gato no ninho">
-            <div class="texto">
-                <p>Uns 10 mil anos atrás, os gatos começaram a viver com os humanos, ajudando a acabar com os ratos que invadiam os grãos. Nessa época, surgiram lendas dizendo que eles nasceram do espírito de um leão, provavelmente porque os dois são bem parecidos, já que vêm da mesma família.</p>
+        <section>
+            <h2>Como Iniciou</h2>
+            <div class="secao">
+                <img src="assets/img/gatoCacando.png" alt="Gato no ninho">
+                <div class="texto">
+                    <p>Uns 10 mil anos atrás, os gatos começaram a viver com os humanos, ajudando a acabar com os ratos
+                        que invadiam os grãos. Nessa época, surgiram lendas dizendo que eles nasceram do espírito de um
+                        leão, provavelmente porque os dois são bem parecidos, já que vêm da mesma família.</p>
+                </div>
             </div>
-        </div>
 
-        <div>
-        <h2 class="texto">Mitologia</h2>
-        <div class="secao-flex">
-            <div class="texto">
-                <div class="subtitulo">Egípcia</div>
-                <p>Os egípcios ficaram ainda mais próximos dos gatos, já que várias de suas divindades tinham partes de gato. A deusa Bastet, por exemplo, era uma mulher com cabeça de gata. Dá pra ver pelos registros que os gatos andavam livremente na corte e se aproximavam de todo mundo sem medo.</p>
-            </div>
-            <figure>
-                <img src="assets/img/bastetdeusa.jpg" alt="Deusa Bastet">
-                <figcaption>BASTET DEUSA</figcaption>
-            </figure>
-        </div>
+            <div>
+                <h2 class="texto">Mitologia</h2>
+                <div class="secao">
+                    <div class="texto">
+                        <div class="subtitulo">Egípcia</div>
+                        <p>Os egípcios ficaram ainda mais próximos dos gatos, já que várias de suas divindades tinham
+                            partes de gato. A deusa Bastet, por exemplo, era uma mulher com cabeça de gata. Dá pra ver
+                            pelos registros que os gatos andavam livremente na corte e se aproximavam de todo mundo sem
+                            medo.</p>
+                    </div>
+                    <figure>
+                        <img src="assets/img/bastetdeusa.jpg" alt="Deusa Bastet">
+                        <figcaption>BASTET DEUSA</figcaption>
+                    </figure>
+                </div>
 
-        <h2>Registros</h2>
-        <div class="galeria">
-            <img src="assets/img/registro1.jpg" alt="Registro em pedra">
-            <img src="assets/img/registro2.jpg" alt="Escultura de gato">
-            <img src="assets/img/registro3.jpg" alt="Estátua de gato">
-        </div>
-    </section>
+                <h2>Registros</h2>
+                <div class="galeria">
+                    <img src="assets/img/registro1.jpg" alt="Registro em pedra">
+                    <img src="assets/img/registro2.jpg" alt="Escultura de gato">
+                    <img src="assets/img/registro3.jpg" alt="Estátua de gato">
+                </div>
+        </section>
 
-</main>
+    </main>
 
-<footer>
-    <img src="assets/img/CATADVICELOGOSEMFUNDO.png" alt="Logo CatAdvice">
-    <p>CATADVICE é um site sobre curiosidades, dicas e entretenimento sobre o mundo felino.</p>
-    <nav>
-        <a href="index.html">Início</a> |
-        <a href="pages/generos.html">Dicas</a> |
-        <a href="pages/plataformas.html">Inscreva-se</a>
-    </nav>
-    <p>&copy; 2025 CatAdvice</p>
-</footer>
+    <footer>
+        <img src="assets/img/CATADVICELOGOSEMFUNDO.png" alt="Logo CatAdvice">
+        <p>CATADVICE é um site sobre curiosidades, dicas e entretenimento sobre o mundo felino.</p>
+        <nav>
+            <a href="index.html">Início</a> |
+            <a href="pages/generos.html">Dicas</a> |
+            <a href="pages/plataformas.html">Inscreva-se</a>
+        </nav>
+        <p>&copy; 2025 CatAdvice</p>
+    </footer>
