--- a/pages/dicas.html
+++ b/pages/dicas.html
@@ -11,21 +11,21 @@
 <body>
     <header>
 
-        <img class="imgAnimation"
-            src="C:\Users\emill\OneDrive\Documentos\code\HTML\assets\img\d285ba2cc51a540ad5d5e06c489ce121.gif"
-            alt="gif">
+        <div class="img-movendo">
+            <img class="imgAnimation" src="../assets/img/gifgatinho.gif" alt="Animação de Gato">
+        </div>
 
         <h1>DICAS </h1>
         <nav>
             <div class="container">
                 <div class="divfilho">
-                    <a href="../index.html"> Início </a>
+                    <a href="../index.html">Início</a>
                 </div>
                 <div class="divfilho">
-                    <a href="../pages/generos.html"> Dicas </a>
+                    <a href="../pages/dicas.html">Dicas</a>
                 </div>
                 <div class="divfilho">
-                    <a href="../pages/plataformas.html"> Inscreva-se </a>
+                    <a href="../pages/inscrevase.html">Inscreva-se </a>
 
                 </div>
             </div>
@@ -70,20 +70,20 @@
         </table>
 
 
-        <div class="breeds-container">
-            <h3 class="breeds-title">Algumas raças</h3>
-            <div class="breeds-gallery">
-                <div class="breed-card">
-                    <img class="breed-image" src="../assets/img/sphynx.jfif" alt="Sphynx">
-                    <p class="breed-name">Sphynx</p>
+        <div class="container-imgs">
+            <h3 class="titulo">Algumas raças</h3>
+            <div class="imagens">
+                <div class="card">
+                    <img src="../assets/img/sphynx.png" alt="Sphynx">
+                    <p>Sphynx</p>
                 </div>
-                <div class="breed-card">
-                    <img class="breed-image" src="../assets/img/siames.jfif" alt="Siamês">
-                    <p class="breed-name">Siamês</p>
+                <div class="card">
+                    <img src="../assets/img/siames.png" alt="Siamês">
+                    <p>Siamês</p>
                 </div>
-                <div class="breed-card">
-                    <img class="breed-image" src="../assets/img/persa.jfif" alt="Persa">
-                    <p class="breed-name">Persa</p>
+                <div class="card">
+                    <img src="../assets/img/persa.png" alt="Persa">
+                    <p>Persa</p>
                 </div>
             </div>
         </div>
